[package]
name = "routers_trellis"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Transition Graph Trellis Structure"
repository = "https://github.com/routers-org/routers"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = ["avx512"]
avx512 = []
tracing = ["dep:tracing"]

[dev-dependencies]
criterion = { workspace = true }
routers_fixtures = { workspace = true }

[[bench]]
name = "solver"
path = "bench/solver.rs"
harness = false

[lints]
workspace = true
