[package]
name = "routers_trellis"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Transition Graph Trellis Structure"
repository = "https://github.com/routers-org/routers"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = ["serde"]

serde = ["dep:serde"]
tracing = ["dep:tracing"]

[dev-dependencies]
criterion = { workspace = true }
routers_fixtures = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "solver"
harness = false

[lints]
workspace = true
