[package]
name = "routers_tz"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Timezone Resolver"

[dependencies]
routers_tz_types = { workspace = true }

itertools = { workspace = true }
ctor = { workspace = true }
lazy_static = { workspace = true }
postcard = { workspace = true }

geo = { workspace = true, features = ["serde"] }
geo-index = { workspace = true, optional = true }
s2 = { workspace = true, optional = true }

time-tz = { workspace = true }

[build-dependencies]
routers_tz_types = { workspace = true }

geo = { workspace = true }
geojson = { workspace = true }
s2 = { workspace = true }

time-tz = { workspace = true }

serde = { workspace = true }
postcard = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "discovery"
harness = false

[features]
default = ["basic"]

basic = []
rtree = ["geo-index"]
s2cell = ["dep:s2"]

[lints]
workspace = true
