[package]
name = "routers_tz"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Timezone Resolver"
include = [
    "src/**/*",
    "build.rs",
    "build/**/*",
    # Only the small pre-baked backend binaries ship. The `basic` backend's
    # prebuilt is ~113 MiB and is intentionally excluded; see lib.rs.
    "data/prebuilt/rtree_timezone_data.postcard.bin",
    "data/prebuilt/s2cell_timezone_data.postcard.bin",
]
repository = "https://github.com/routers-org/routers"

[dependencies]
routers_tz_types = { workspace = true }

itertools = { workspace = true }
ctor = { workspace = true }
lazy_static = { workspace = true }
postcard = { workspace = true }

geo = { workspace = true, features = ["serde"] }
geo-index = { workspace = true, optional = true }
s2 = { workspace = true, optional = true }

time-tz = { workspace = true }

[build-dependencies]
routers_tz_types = { workspace = true }

geo = { workspace = true }
geojson = { workspace = true }
s2 = { workspace = true }

time-tz = { workspace = true }

serde = { workspace = true }
postcard = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "discovery"
harness = false

[features]
default = ["s2cell"]

basic = []
rtree = ["dep:geo-index"]
s2cell = ["dep:s2"]

[lints]
workspace = true
