[package]
name = "routers_viewer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
routers = { workspace = true }
routers_network = { workspace = true }
routers_codec = { workspace = true }
routers_fixtures = { workspace = true }
routers_transition = { workspace = true }
routers_shard = { workspace = true }
routers_realtime = { workspace = true }

log = { workspace = true }
anyhow = { workspace = true }
quick-error = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }

geo = { workspace = true }
wkt = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }

# UI Dependencies
eframe = "0.33.0"
egui = "0.33.0"
walkers = { version = "0.47", features = ["serde"] } # Version compatible with egui 0.33

# Async runtime for any background tile fetching
tokio = { workspace = true }

# Realtime event ingestion (realtime bin)
async-nats = "0.38.0"
futures = "0.3.32"
web-time = "1"

# Mock Network Dependencies
petgraph = { workspace = true }
rstar = { workspace = true }
rustc-hash = { workspace = true }
pathfinding = "4.14.0"

serde = { workspace = true }
serde_json = { workspace = true }

# Snapshot diffing (snapdiff bin)
similar = "2"

humantime = "2.1"
chrono = "0.4.44"

[dev-dependencies]
routers_fixtures = { workspace = true }

[lints]
workspace = true

[features]
persistence = ["eframe/persistence"]

default = ["persistence"]
