[package]
name = "routers_tz"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Timezone Resolver"

[dependencies]
routers_tz_types = { workspace = true }
routers_tz_build = { workspace = true }

itertools = { workspace = true }
ctor = { workspace = true }
lazy_static = { workspace = true }

geo = { workspace = true, features = ["serde"] }
geo-index = { workspace = true, optional = true }
s2 = { workspace = true, optional = true }

time-tz = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "discovery"
harness = false

[features]
default = ["basic"]

basic = ["routers_tz_build/basic"]
rtree = ["routers_tz_build/rtree", "geo-index"]
s2cell = ["routers_tz_build/s2cell", "dep:s2"]

[lints]
workspace = true
