[package]
name = "routers_tz_build"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Data Builder for the Routers Timezone Resolver"

[dependencies]
lazy_static = "1.5.0"
bincode = { version = "2.0.1", features = ["serde"] }
routers_tz_types = { workspace = true }

[build-dependencies]
geo = "0.30.0"
geojson = "0.24.2"
bincode = { version = "2.0.1", features = ["serde"] }
routers_tz_types = { workspace = true }
