[package]
name = "routers_tz_build"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Data Builder for the Routers Timezone Resolver"

[dependencies]
routers_tz_types = { workspace = true }
postcard = { workspace = true }
lazy_static = "1.5.0"

[build-dependencies]
routers_tz_types = { workspace = true }

geo = { workspace = true}
geojson = { workspace = true }
s2 = { workspace = true }

tz-rs = "0.7.0"
tzdb_data = "0.2.2"
time-tz = "2.0.0"

serde = { workspace = true }
postcard = { workspace = true }
rayon = { workspace = true }

[features]
rtree = []
basic = []
s2cell = []
