[package]
name = "routers_tz_build"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Data Builder for the Routers Timezone Resolver"

[dependencies]
routers_tz_types = { workspace = true }
postcard = { workspace = true }
lazy_static = { workspace = true }

[build-dependencies]
routers_tz_types = { workspace = true }

geo = { workspace = true}
geojson = { workspace = true }
s2 = { workspace = true }

time-tz = { workspace = true }

serde = { workspace = true }
postcard = { workspace = true }
rayon = { workspace = true }

[features]
rtree = []
basic = []
s2cell = []

[lints]
workspace = true
