[package]
name = "routers_tz_types"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Data Builder for the Routers Timezone Resolver"

[dependencies]
geo = { version = "0.30.0", features = ["use-serde"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
geo-index = { version = "0.3.1" }
ouroboros = "0.18.5"


