[package]
name = "routers_tz_types"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Data Builder for the Routers Timezone Resolver"

[dependencies]
geo = { workspace = true, features = ["use-serde"] }
serde = { workspace = true, features = ["derive"] }

geo-index = { workspace = true }
geozero = "0.14.0"

ouroboros = "0.18.5"
time-tz = "2.0.0"
tz-rs = { version = "0.7.0" }
