[package]
name = "routers_tz_types"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Data Builder for the Routers Timezone Resolver"

[dependencies]
geo = { workspace = true, features = ["use-serde"] }
geo-index = { workspace = true }

serde = { workspace = true, features = ["derive"] }
ouroboros = { workspace = true }

time-tz = { workspace = true }

[lints]
workspace = true
